[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://purchase_counter/purchase_counter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 224 )

[node name="purchase_counter" type="Node2D"]
position = Vector2( 96, 1344 )
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="sprite_bucket_counter" type="Sprite" parent="StaticBody2D"]
position = Vector2( 64, -160 )
scale = Vector2( 1, 3.5 )
texture = ExtResource( 1 )

[node name="sprite_money_counter" type="Sprite" parent="StaticBody2D"]
position = Vector2( -32, -160 )
scale = Vector2( 0.5, 3.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 32, -160 )
shape = SubResource( 1 )

[node name="gem_bucket_1" type="TextureRect" parent="."]
margin_top = -80.0
margin_right = 128.0
margin_bottom = 48.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gem_bucket_2" type="TextureRect" parent="."]
visible = false
margin_top = -224.0
margin_right = 128.0
margin_bottom = -96.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gem_bucket_3" type="TextureRect" parent="."]
visible = false
margin_top = -368.0
margin_right = 128.0
margin_bottom = -240.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_purchase_counter" type="TextureButton" parent="."]
margin_left = -64.0
margin_top = -384.0
margin_right = 128.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}
